--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -118,7 +118,17 @@
                         </div>
                     </li>
                     <!-- 验证码 kaptcha -->
-
+                    <li>
+                        <div class="item-content">
+                            <div class="item-inner">
+                                <div class="item-title label">验证码</div>
+                                <input type="text" id="j_captcha" placeholder="验证码">
+                                <div class="item-input">
+                                    <img id="captcha_img" alt="点击更换" title="点击更换" onclick="changeVerifyCode(this)" src="../Kaptcha">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div class="content-block">
@@ -140,5 +150,7 @@
         src='../../../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript'
         src='../../../resources/js/shop/shopoperation.js' charset='utf-8'></script>
+<script type='text/javascript'
+        src='../../../resources/js/common/common.js' charset='utf-8'></script>
 </body>
 </html>
