修改了所有前端文件的资源html的相对路径以及js文件的访问路径，解决了项目名前缀访问问题，添加了主页前端代码以及其后端开发

--- a/src/main/webapp/WEB-INF/html/shop/productmanagement.html
+++ b/src/main/webapp/WEB-INF/html/shop/productmanagement.html
@@ -9,11 +9,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm.min.css">
+	href="../resources/css/common/sm.min.css">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm-extend.min.css">
+	href="../resources/css/common/sm-extend.min.css">
 <link rel="stylesheet"
-	href="../../../resources/css/shop/productmanagement.css">
+	href="../resources/css/shop/productmanagement.css">
 </head>
 <body>
 	<header class="bar bar-nav">
@@ -41,11 +41,11 @@
 		<div class="content-block">
 			<div class="row">
 				<div class="col-50">
-					<a href="/shopadmin/shopmanagement"
+					<a href="/fleamarket/shopadmin/shopmanagement"
 						class="button button-big button-fill button-danger">返回</a>
 				</div>
 				<div class="col-50">
-					<a href="/shopadmin/productoperation" class="button button-big button-fill button-success"
+					<a href="/fleamarket/shopadmin/productoperation" class="button button-big button-fill button-success"
 						id="new">新增</a>
 				</div>
 			</div>
@@ -55,12 +55,12 @@
 
 
 	<script type='text/javascript'
-		src='../../../resources/js/common/zepto.min.js' charset='utf-8'></script>
+		src='../resources/js/common/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm.min.js' charset='utf-8'></script>
+		src='../resources/js/common/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
+		src='../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/shop/productmanagement.js' charset='utf-8'></script>
+		src='../resources/js/shop/productmanagement.js' charset='utf-8'></script>
 </body>
 </html>
