--- a/src/main/webapp/WEB-INF/html/shop/productoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/productoperation.html
@@ -9,11 +9,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm.min.css">
+	href="../resources/css/common/sm.min.css">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm-extend.min.css">
+	href="../resources/css/common/sm-extend.min.css">
 <link rel="stylesheet"
-	href="../../../resources/css/shop/productmanagement.css">
+	href="../resources/css/shop/productmanagement.css">
 </head>
 <body>
 	<header class="bar bar-nav">
@@ -177,7 +177,7 @@
 		<div class="content-block">
 			<div class="row">
 				<div class="col-50">
-					<a href="/shopadmin/productmanagement"
+					<a href="/fleamarket/shopadmin/productmanagement"
 						class="button button-big button-fill button-danger" id="back">返回商品管理</a>
 				</div>
 				<div class="col-50">
@@ -190,14 +190,14 @@
 
 
 	<script type='text/javascript'
-		src='../../../resources/js/common/zepto.min.js' charset='utf-8'></script>
+		src='../resources/js/common/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm.min.js' charset='utf-8'></script>
+		src='../resources/js/common/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
-	<script type='text/javascript' src='../../../resources/js/common/common.js'
+		src='../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/common/common.js'
 		charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/shop/productoperation.js' charset='utf-8'></script>
+		src='../resources/js/shop/productoperation.js' charset='utf-8'></script>
 </body>
 </html>
