--- a/src/main/webapp/WEB-INF/html/shop/shoplist.html
+++ b/src/main/webapp/WEB-INF/html/shop/shoplist.html
@@ -10,10 +10,10 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm.min.css">
+	href="../resources/css/common/sm.min.css">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm-extend.min.css">
-<link rel="stylesheet" href="../../../resources/css/shop/shoplist.css">
+	href="../resources/css/common/sm-extend.min.css">
+<link rel="stylesheet" href="../resources/css/shop/shoplist.css">
 </head>
 <body>
 	<header class="bar bar-nav">
@@ -23,7 +23,7 @@
 		<div class="content-block">
 			<p>
 				你好,<span id="user-name"></span><a class="pull-right"
-					href="/shopadmin/shopoperation">增加店铺</a>
+					href="/fleamarket/shopadmin/shopoperation">增加店铺</a>
 			</p>
 			<div class="row row-shop">
 				<div class="col-40">商店名称</div>
@@ -35,7 +35,7 @@
 		<div class="content-block">
 			<div class="row">
 				<div class="col-33">
-					<a href="/local/accountbind?usertype=2"
+					<a href="/fleamarket/local/accountbind?usertype=2"
 						class="button button-big button-fill button-success">帐号绑定</a>
 				</div>
 				<div class="col-33">
@@ -43,7 +43,7 @@
 						class="button button-big button-fill button-danger">退出系统</a>
 				</div>
 				<div class="col-33">
-					<a href="/local/changepsw?usertype=2"
+					<a href="/fleamarket/local/changepsw?usertype=2"
 						class="button button-big button-fill button-success"
 						id="bindOrChange">修改密码</a>
 				</div>
@@ -54,12 +54,12 @@
 
 
 	<script type='text/javascript'
-		src='../../../resources/js/common/zepto.min.js' charset='utf-8'></script>
+		src='../resources/js/common/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm.min.js' charset='utf-8'></script>
+		src='../resources/js/common/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
-	<script type='text/javascript' src='../../../resources/js/shop/shoplist.js'
+		src='../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/shop/shoplist.js'
 		charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/local/logout.js'
 		charset='utf-8'></script>		
