--- a/src/main/webapp/WEB-INF/html/shop/shopmanagement.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopmanagement.html
@@ -10,10 +10,10 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm.min.css">
+	href="../resources/css/common/sm.min.css">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm-extend.min.css">
-<link rel="stylesheet" href="../../../resources/css/shop/shopmanagement.css">
+	href="../resources/css/common/sm-extend.min.css">
+<link rel="stylesheet" href="../resources/css/shop/shopmanagement.css">
 </head>
 <body>
 	<header class="bar bar-nav">
@@ -23,19 +23,19 @@
 		<div class="content-block">
 			<div class="row">
 				<div class="col-50 mb">
-					<a id="shopInfo" href="/shopadmin/shopoperation"
+					<a id="shopInfo" href="/fleamarket/shopadmin/shopoperation"
 						class="button button-big button-fill">商铺信息</a>
 				</div>
 				<div class="col-50 mb">
-					<a href="/shopadmin/productmanagement"
+					<a href="/fleamarket/shopadmin/productmanagement"
 						class="button button-big button-fill">商品管理</a>
 				</div>
 				<div class="col-50 mb">
-					<a href="/shopadmin/productcategorymanagement"
+					<a href="/fleamarket/shopadmin/productcategorymanagement"
 						class="button button-big button-fill">类别管理</a>
 				</div>
 				<div class="col-100 mb">
-					<a href="/shopadmin/shoplist"
+					<a href="/fleamarket/shopadmin/shoplist"
 						class="button button-big button-fill button-danger">返回</a>
 				</div>
 			</div>
@@ -43,14 +43,14 @@
 	</div>
 
 	<script type='text/javascript'
-		src='../../../resources/js/common/zepto.min.js' charset='utf-8'></script>
+		src='../resources/js/common/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm.min.js' charset='utf-8'></script>
+		src='../resources/js/common/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
+		src='../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/common.js' charset='utf-8'></script>
-	<script type='text/javascript' src='../../../resources/js/shop/shopmanagement.js'
+		src='../resources/js/common/common.js' charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/shop/shopmanagement.js'
 		charset='utf-8'></script>
 </body>
 </html>
