--- a/src/main/webapp/WEB-INF/html/shop/productcategorymanagement.html
+++ b/src/main/webapp/WEB-INF/html/shop/productcategorymanagement.html
@@ -9,11 +9,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm.min.css">
+	href="../resources/css/common/sm.min.css">
 <link rel="stylesheet"
-	href="../../../resources/css/common/sm-extend.min.css">
+	href="../resources/css/common/sm-extend.min.css">
 <link rel="stylesheet"
-	href="../../../resources/css/shop/productcategorymanagement.css">
+	href="../resources/css/shop/productcategorymanagement.css">
 </head>
 <body>
 	<header class="bar bar-nav">
@@ -47,13 +47,13 @@
 
 
 	<script type='text/javascript'
-		src='../../../resources/js/common/zepto.min.js' charset='utf-8'></script>
+		src='../resources/js/common/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm.min.js' charset='utf-8'></script>
+		src='../resources/js/common/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
+		src='../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../../../resources/js/shop/productcategorymanagement.js'
+		src='../resources/js/shop/productcategorymanagement.js'
 		charset='utf-8'></script>
 </body>
 </html>
