--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -15,9 +15,9 @@
     <!-- Google Web Fonts -->
 
     <link rel="stylesheet"
-          href="../../../resources/css/common/sm.min.css">
+          href="../resources/css/common/sm.min.css">
     <link rel="stylesheet"
-          href="../../../resources/css/common/sm-extend.min.css">
+          href="../resources/css/common/sm-extend.min.css">
 
     <link rel="apple-touch-icon-precomposed" href="/assets/img/apple-touch-icon-114x114.png">
     <script>
@@ -143,14 +143,14 @@
 
 </div>
 <script type='text/javascript'
-        src='../../../resources/js/common/zepto.min.js' charset='utf-8'></script>
+        src='../resources/js/common/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript'
-        src='../../../resources/js/common/sm.min.js' charset='utf-8'></script>
+        src='../resources/js/common/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript'
-        src='../../../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
+        src='../resources/js/common/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript'
-        src='../../../resources/js/shop/shopoperation.js' charset='utf-8'></script>
+        src='../resources/js/shop/shopoperation.js' charset='utf-8'></script>
 <script type='text/javascript'
-        src='../../../resources/js/common/common.js' charset='utf-8'></script>
+        src='../resources/js/common/common.js' charset='utf-8'></script>
 </body>
 </html>
